--- a/.editorconfig
+++ b/.editorconfig
@@ -6,11 +6,7 @@ end_of_line = lf
 insert_final_newline = true
 trim_trailing_whitespace = true
 
-[*.lua]
-indent_style = space
-indent_size = 2
-
-[*.json]
+[*.{lua,json,toml}]
 indent_style = space
 indent_size = 2
 
